Fix layout issues

--- a/main.css
+++ b/main.css
@@ -1,3 +1,10 @@
+html, body, #container {
+    width:100%;
+    height:100%;
+    margin:0;
+    padding:0;
+}
+
 h1 {
     font-size:32px;
 }
@@ -16,11 +23,11 @@ h1 {
 
 * {
     -webkit-touch-callout: none;
--webkit-user-select: none;
--khtml-user-select: none;
--moz-user-select: none;
--ms-user-select: none;
-user-select: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 body {
@@ -62,12 +69,15 @@ h1 {
 }
 
 #info {
-    position:absolute;
-    bottom:0;
-    left:0; right:0;
+    display: table-row;
+    vertical-align: bottom;
+    height: 1px;
+}
+#container {
+    display: table;
 }
 
-@media (max-width:700px) {
+@media (max-width:700px), (orientation:portrait) {
     h1 {
         font-size:10vw;
     }
@@ -83,8 +93,7 @@ h1 {
     #answer.n {
         font-size:80vw;
     }
-    #info {
-        position:static;
+    #moreinfo {
         margin-top:10vw;
     }
 }
@@ -107,7 +116,6 @@ h1 {
         font-size:256px;
     }
     #info {
-        position:static;
         margin-top:32px;
     }
 }
